# korb-guru

./: .env.example  .env.infra.example  .gitignore  LICENSE  README.md  docker-compose.infra.yml  docker-compose.yml
apify/: README.md  config.py  google_maps.py  orchestrator.py  pyproject.toml
apify/actors/open-food-facts-swiss/: Dockerfile  README.md  requirements.txt
apify/actors/recipe-collector/: Dockerfile  README.md  requirements.txt
apify/actors/shopping-agent/: README.md  requirements.txt
apify/actors/swiss-grocery-scraper/: Dockerfile  README.md  requirements.txt
apify/ingest/: transform.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20250310_initial_example_schema.py  20260311_add_domain_tables.py  20260311_f52f8e9e1113_add_users_table.py  20260315_add_auto_refill_and_grocery_category.py  20260315_add_store_gmaps_fields.py  20260315_add_swipe_actions_unique_constraint.py  20260315_add_unique_constraints.py  20260315_seed_zurich_stores.py  20260317_add_product_nutrition.py  20260317_add_store_products.py
backend/crawler/smartcart/: config.py  main.py
backend/prompts/: product-qa.md  shopping-recommendations.md
backend/scripts/: export_openapi.py  import_off.py  import_off_fast.py  import_off_stream.py
backend/src/: __init__.py  analytics.py  auth.py  config.py  db.py  dependencies.py  ingest_ratelimit.py  logging_config.py  main.py  request_context.py
backend/src/models/: __init__.py  auto_refill.py  base.py  budget.py  grocery.py  household.py  meal_plan.py  message.py  notification.py  poll.py  product.py  recipe.py  store.py  store_product.py  user.py
backend/src/qdrant/: __init__.py  client.py  (+1 more)
backend/tests/: conftest.py  factories.py  test_examples_migrated_schema.py  test_smoke.py  test_users.py  test_users_integration.py
(+107 files in other folders)
